--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
+    "@types/react-test-renderer": "^17.0.1",
     "jest-dom": "^4.0.0",
     "react-test-render": "^1.1.2"
   }
